Updated Email Validation and registration

--- a/templates/heading.html
+++ b/templates/heading.html
@@ -23,7 +23,7 @@
               ><i class="lni-lock"></i> Log In</a
             >
             |
-            <a href="register.html" class="header-top-button"
+            <a href="{% url 'register' %}" class="header-top-button"
               ><i class="lni-pencil"></i> Register</a
             >
           </div>
