--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <div class="page-header" style="background: url(assets/img/banner1.jpg)">
   <div class="container">
@@ -25,6 +23,7 @@
         <div class="register-form login-area">
           <h3>Register</h3>
           <form class="login-form" method="POST">
+            {% csrf_token %}
             <div class="form-group">
               <div class="input-icon">
                 <i class="lni-user"></i>
@@ -32,7 +31,7 @@
                   type="text"
                   id="Name"
                   class="form-control"
-                  name="email"
+                  name="username"
                   placeholder="Username"
                 />
               </div>
@@ -54,7 +53,9 @@
                 <i class="lni-lock"></i>
                 <input
                   type="password"
+                  id="password"
                   class="form-control"
+                  name="password"
                   placeholder="Password"
                 />
               </div>
@@ -64,7 +65,9 @@
                 <i class="lni-lock"></i>
                 <input
                   type="password"
+                  id="password2"
                   class="form-control"
+                  name="password2"
                   placeholder="Retype Password"
                 />
               </div>
@@ -81,41 +84,15 @@
                 >
               </div>
             </div>
-            <div class="form-group rules-container mb-3">
-              <div class="pink-line"></div>
-              <ul class="rules-list">
-                <li class="rule-item">
-                  <div>
-                    <span class="rule-text">1</span>          
-                  </div>
-                  <div class="green-line"></div>
-                </li>
-                
-                <li class="rule-item">
-                  <div>
-                    <span class="rule-text">2</span>          
-                  </div>
-                  <div class="green-line"></div>
-                </li>
-                
-                <li class="rule-item">
-                  <div>
-                    <span class="rule-text">3</span>          
-                  </div>
-                  <div class="green-line"></div>
-                </li>
-                
-                <li class="rule-item">
-                  <div>
-                    <span class="rule-text">4</span>          
-                  </div>
-                  <div class="green-line"></div>
-                </li>
-              </ul>
-            </div>
-            </div>
             <div class="text-center">
-              <button class="btn btn-common save-button log-btn">Register</button>
+              <button
+                class="btn btn-common save-button log-btn"
+                name="register"
+                id="register"
+                disabled
+              >
+                Register
+              </button>
             </div>
           </form>
         </div>
@@ -124,51 +101,68 @@
   </div>
 </section>
 <script>
+  // Enable button when all fields are filled and checkbox is checked and passwords match and email is valid
+  const registerButton = document.getElementById("register");
+  const name = document.getElementById("Name");
+  const email = document.getElementById("sender-email");
+  const password = document.getElementById("password");
+  const password2 = document.getElementById("password2");
+  const checkbox = document.getElementById("checkedall");
 
-const specialCharsRegex = /[!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]/
-const upperCaseRegex = /[A-Z]/
-const numberRegex = /[0-9]/
-
-const validationRules = [
-  {
-    label: '8 Characters', 
-    validate: input => input.length>=8,
-    labelWidth: 100 // this depends on the label length
-  },
-  {
-    label: '1 Special Character', 
-    validate: input => specialCharsRegex.test(input),
-    labelWidth: 150
-  },
-  {
-    label: '1 Upper Case', 
-    validate: input => upperCaseRegex.test(input),
-    labelWidth: 110
-  },
-  { 
-    label: '1 Number', 
-    validate: input => numberRegex.test(input),
-    labelWidth: 80
-  }
-]
-
-new Vue({
-  el: '#app',
-  data: {
-    password: ''
-  },
-  computed: {
-    rules () {
-      return validationRules.map(rule => {
-        return {
-          label: rule.label,
-          isValid: rule.validate(this.password),
-          labelWidth: rule.labelWidth
-        }
-      })
+  const checkFields = () => {
+    if (
+      name.value &&
+      email.value &&
+      password.value &&
+      password2.value &&
+      checkbox.checked
+    ) {
+      registerButton.disabled = false;
+    } else {
+      registerButton.disabled = true;
     }
-  }
-})
+  };
 
+  name.addEventListener("input", checkFields);
+  email.addEventListener("input", checkFields);
+  password.addEventListener("input", checkFields);
+  password2.addEventListener("input", checkFields);
+  checkbox.addEventListener("input", checkFields);
+
+  const checkPasswords = () => {
+    if (password.value !== password2.value) {
+      password2.setCustomValidity("Passwords do not match");
+    } else {
+      password2.setCustomValidity("");
+    }
+  };
+
+  password2.addEventListener("input", checkPasswords);
+
+
+  const checkEmail = () => {
+    if (email.validity.typeMismatch) {
+      email.setCustomValidity("Please enter a valid email address");
+    } else {
+      email.setCustomValidity("");
+    }
+  };
+
+  email.addEventListener("input", checkEmail);
+
+
+  const checkAll = () => {
+    checkFields();
+    checkPasswords();
+    checkEmail();
+  };
+
+  name.addEventListener("input", checkAll);
+  email.addEventListener("input", checkAll);
+  password.addEventListener("input", checkAll);
+  password2.addEventListener("input", checkAll);
+  checkbox.addEventListener("input", checkAll);
+
+  
 </script>
 {% endblock content %}
