--- a/templates/footer.html
+++ b/templates/footer.html
@@ -16,7 +16,8 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <form>
+              <form method="post" action="{% url 'subscribe' %}">
+                {% csrf_token %}
                 <div class="subscribe">
                   <input
                     class="form-control"
@@ -25,6 +26,7 @@
                     required=""
                     type="email"
                   />
+                  <input type="hidden" name="next" value="{{ request.path }}">
                   <button class="btn btn-common" type="submit">Subscribe</button>
                 </div>
               </form>
