--- a/templates/base.html
+++ b/templates/base.html
@@ -2,46 +2,47 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% comment %} Headers imported from here {% endcomment %} 
-    {% block header %} {% include "header.html" %} {% endblock %} 
-    {% comment %} footer starts from here {% endcomment %}
+    {% comment %}Headers imported from here{% endcomment %}
+    {% block header %}
+      {% include 'header.html' %}
+    {% endblock %}
+    {% comment %}footer starts from here{% endcomment %}
   </head>
   <body>
-    {% block heading %} {% include "heading.html" %} {% endblock %}
+    {% block heading %}
+      {% include 'heading.html' %}
+    {% endblock %}
 
     {% block content %}
-    
-    {% endblock content %}
+
+    {% endblock %}
     <div aria-live="polite" aria-atomic="true" style="position: fixed; top: 1rem; right: 1rem; z-index: 1050;">
       {% if messages %}
-          {% for message in messages %}
-              <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000">
-                  <div class="toast-header">
-                      <strong class="mr-auto">Notification</strong>
-                      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="toast-body">
-                      {{ message }}
-                  </div>
-              </div>
-          {% endfor %}
+        {% for message in messages %}
+          <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000">
+            <div class="toast-header">
+              <strong class="mr-auto">Notification</strong>
+              <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="toast-body">{{ message }}</div>
+          </div>
+        {% endfor %}
       {% endif %}
-  </div>
-    
+    </div>
 
-    {% comment %} footer starts from here {% endcomment %} 
-    {% block footer %} {% include "footer.html" %} {% endblock %}
-    {% comment %} footer ends here {% endcomment %}
+    {% comment %}footer starts from here{% endcomment %}
+    {% block footer %}
+      {% include 'footer.html' %}
+    {% endblock %}
+    {% comment %}footer ends here{% endcomment %}
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-        $(document).ready(function(){
-            $('.toast').toast('show');
-        });
-    </script>  
+      $(document).ready(function () {
+        $('.toast').toast('show')
+      })
+    </script>
   </body>
 </html>
