--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,185 +1,161 @@
 {% load static %}
 
-{% comment %} footer starts from here {% endcomment %}
-    <section class="subscribes section-padding">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <div class="subscribes-inner">
-                <div class="icon">
-                  <i class="lni-pointer"></i>
-                </div>
-                <div class="sub-text">
-                  <h3>Subscribe to Newsletter</h3>
-                  <p>and receive new ads in inbox</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <form method="post" action="{% url 'subscribe' %}">
-                {% csrf_token %}
-                <div class="subscribe">
-                  <input
-                    class="form-control"
-                    name="EMAIL"
-                    placeholder="Enter your Email"
-                    required=""
-                    type="email"
-                  />
-                  <input type="hidden" name="next" value="{{ request.path }}">
-                  <button class="btn btn-common" type="submit">Subscribe</button>
-                </div>
-              </form>
-            </div>
+{% comment %}footer starts from here{% endcomment %}
+<section class="subscribes section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="subscribes-inner">
+          <div class="icon">
+            <i class="lni-pointer"></i>
+          </div>
+          <div class="sub-text">
+            <h3>Subscribe to Newsletter</h3>
+            <p>and receive new ads in inbox</p>
           </div>
         </div>
-      </section>
-  
-      <footer>
-        <section class="footer-Content">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-4 col-md-4 col-xs-6 col-mb-12">
-                <div class="widget">
-                  <div class="footer-logo">
-                    <img src="assets/img/logo.png" alt="" />
-                  </div>
-                  <div class="textwidget">
-                    <p>
-                      Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-                      odit aut fugit, sed quia consequuntur magni dolores eos qui
-                      ratione voluptatem sequi nesciunt consectetur, adipisci
-                      velit.
-                    </p>
-                  </div>
-                  <ul class="mt-3 footer-social">
-                    <li>
-                      <a class="facebook" href="#"
-                        ><i class="lni-facebook-filled"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a class="twitter" href="#"
-                        ><i class="lni-twitter-filled"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a class="linkedin" href="#"
-                        ><i class="lni-linkedin-fill"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a class="google-plus" href="#"
-                        ><i class="lni-google-plus"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-4 col-xs-6 col-mb-12">
-                <div class="widget">
-                  <h3 class="block-title">Quick Link</h3>
-                  <ul class="menu">
-                    <li><a href="#">- About Us</a></li>
-                    <li><a href="#">- Blog</a></li>
-                    <li><a href="#">- Events</a></li>
-                    <li><a href="#">- Shop</a></li>
-                    <li><a href="#">- FAQ's</a></li>
-                    <li><a href="#">- About Us</a></li>
-                    <li><a href="#">- Blog</a></li>
-                    <li><a href="#">- Events</a></li>
-                    <li><a href="#">- Shop</a></li>
-                    <li><a href="#">- FAQ's</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-4 col-xs-6 col-mb-12">
-                <div class="widget">
-                  <h3 class="block-title">Contact Info</h3>
-                  <ul class="contact-footer">
-                    <li>
-                      <strong><i class="lni-phone"></i></strong
-                      ><span
-                        >+1 555 444 66647 <br />
-                        +1 555 444 66647</span
-                      >
-                    </li>
-                    <li>
-                      <strong><i class="lni-envelope"></i></strong
-                      ><span
-                        ><a
-                          href="http://preview.uideck.com/cdn-cgi/l/email-protection"
-                          class="__cf_email__"
-                          data-cfemail="cdaea2a3b9acaeb98da0aca4a1e3aea2a0"
-                          >[email&#160;protected]</a
-                        >
-                        <br />
-                        <a
-                          href="http://preview.uideck.com/cdn-cgi/l/email-protection"
-                          class="__cf_email__"
-                          data-cfemail="d8abada8a8b7aaac98b5b9b1b4f6bbb7b5"
-                          >[email&#160;protected]</a
-                        ></span
-                      >
-                    </li>
-                    <li>
-                      <strong><i class="lni-map-marker"></i></strong
-                      ><span
-                        ><a href="#"
-                          >9870 St Vincent Place, Glasgow, DC 45 <br />Fr 45</a
-                        ></span
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-  
-        <div id="copyright">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="site-info text-center">
-                  <p>
-                    <a target="_blank" href="https://templateshub.net"
-                      >Templates Hub</a
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
-  
-      <a href="#" class="back-to-top">
-        <i class="lni-chevron-up"></i>
-      </a>
-  
-      <div id="preloader">
-        <div class="loader" id="loader-1"></div>
       </div>
-  
-      {% comment %} footer ends here {% endcomment %}
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <form method="post" action="{% url 'subscribe' %}">
+          {% csrf_token %}
+          <div class="subscribe">
+            <input class="form-control" name="EMAIL" placeholder="Enter your Email" required="" type="email" />
+            <input type="hidden" name="next" value="{{ request.path }}" />
+            <button class="btn btn-common" type="submit">Subscribe</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
 
+<footer>
+  <section class="footer-Content">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-xs-6 col-mb-12">
+          <div class="widget">
+            <div class="footer-logo">
+              <img src="assets/img/logo.png" alt="" />
+            </div>
+            <div class="textwidget">
+              <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt consectetur, adipisci velit.</p>
+            </div>
+            <ul class="mt-3 footer-social">
+              <li>
+                <a class="facebook" href="#"><i class="lni-facebook-filled"></i></a>
+              </li>
+              <li>
+                <a class="twitter" href="#"><i class="lni-twitter-filled"></i></a>
+              </li>
+              <li>
+                <a class="linkedin" href="#"><i class="lni-linkedin-fill"></i></a>
+              </li>
+              <li>
+                <a class="google-plus" href="#"><i class="lni-google-plus"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-6 col-mb-12">
+          <div class="widget">
+            <h3 class="block-title">Quick Link</h3>
+            <ul class="menu">
+              <li>
+                <a href="#">- About Us</a>
+              </li>
+              <li>
+                <a href="#">- Blog</a>
+              </li>
+              <li>
+                <a href="#">- Events</a>
+              </li>
+              <li>
+                <a href="#">- Shop</a>
+              </li>
+              <li>
+                <a href="#">- FAQ's</a>
+              </li>
+              <li>
+                <a href="#">- About Us</a>
+              </li>
+              <li>
+                <a href="#">- Blog</a>
+              </li>
+              <li>
+                <a href="#">- Events</a>
+              </li>
+              <li>
+                <a href="#">- Shop</a>
+              </li>
+              <li>
+                <a href="#">- FAQ's</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-6 col-mb-12">
+          <div class="widget">
+            <h3 class="block-title">Contact Info</h3>
+            <ul class="contact-footer">
+              <li>
+                <strong><i class="lni-phone"></i></strong><span>
+                  +1 555 444 66647 <br />
+                  +1 555 444 66647
+                </span>
+              </li>
+              <li>
+                <strong><i class="lni-envelope"></i></strong><span>
+                  <a href="http://preview.uideck.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="cdaea2a3b9acaeb98da0aca4a1e3aea2a0">[email&#160;protected]</a>
+                  <br />
+                  <a href="http://preview.uideck.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="d8abada8a8b7aaac98b5b9b1b4f6bbb7b5">[email&#160;protected]</a>
+                </span>
+              </li>
+              <li>
+                <strong><i class="lni-map-marker"></i></strong><span><a href="#">9870 St Vincent Place, Glasgow, DC 45 <br />Fr 45</a></span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-      
-    <script
-      data-cfasync="false"
-      src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
-    ></script>
-    <script src="{% static "assets/js/jquery-min.js" %}"></script>
-    <script src="{% static "assets/js/popper.min.js-min.js" %}"></script>
-    <script src="{% static "assets/js/bootstrap.min.js" %}"></script>
-    {% comment %} <script src="{% static "assets/js/color-switcher.js" %}"></script> {% endcomment %}
-    <script src="{% static "assets/js/jquery.counterup.min.js" %}"></script>
-    <script src="{% static "assets/js/waypoints.min.js" %}"></script>
-    <script src="{% static "assets/js/wow.js" %}"></script>
-    <script src="{% static "assets/js/owl.carousel.min.js" %}"></script>
-    <script src="{% static "assets/js/jquery.slicknav.js" %}"></script>
-    <script src="{% static "assets/js/main.js" %}"></script>
-    <script src="{% static "assets/js/form-validator.min.js" %}"></script>
-    <script src="{% static "assets/js/contact-form-script.min.js" %}"></script>
-    <script src="{% static "assets/js/summernote.js" %}"></script>
+  <div id="copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="site-info text-center">
+            <p>
+              <span>
+                © Copyright 2024 | Hame v2 <a target="_blank" href="https://amoghsaxena.com">by REXTER</a>
+              </span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a>
+
+<div id="preloader">
+  <div class="loader" id="loader-1"></div>
+</div>
+
+{% comment %}footer ends here{% endcomment %}
+
+<script src="{% static 'assets/js/jquery-min.js' %}"></script>
+<script src="{% static 'assets/js/popper.min.js' %}"></script>
+<script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+{% comment %} <script src="{% static 'assets/js/color-switcher.js' %}"></script> {% endcomment %}
+<script src="{% static 'assets/js/jquery.counterup.min.js' %}"></script>
+<script src="{% static 'assets/js/waypoints.min.js' %}"></script>
+<script src="{% static 'assets/js/wow.js' %}"></script>
+<script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+<script src="{% static 'assets/js/jquery.slicknav.js' %}"></script>
+<script src="{% static 'assets/js/main.js' %}"></script>
+<script src="{% static 'assets/js/form-validator.min.js' %}"></script>
+<script src="{% static 'assets/js/contact-form-script.min.js' %}"></script>
+<script src="{% static 'assets/js/summernote.js' %}"></script>
