--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,21 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-<div class="page-header" style="background: url(assets/img/banner1.jpg)">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="breadcrumb-wrapper">
-          <h2 class="product-title">Login</h2>
-          <ol class="breadcrumb">
-            <li><a href="index-2.html">Home /</a></li>
-            <li class="current">Login</li>
-          </ol>
+  <div class="page-header" style="background: url(assets/img/banner1.jpg)">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="breadcrumb-wrapper">
+            <h2 class="product-title">Login</h2>
+            <ol class="breadcrumb">
+              <li>
+                <a href="index-2.html">Home /</a>
+              </li>
+              <li class="current">Login</li>
+            </ol>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-{% endblock content %}
+{% endblock %}
