--- a/templates/login.html
+++ b/templates/login.html
@@ -1,87 +1,65 @@
-{% extends "base.html" %} {% block content %}
+{% extends 'base.html' %} {% block content %}
+  <!-- Write your header of the page here -->
 
-<!-- Write your header of the page here -->
-
-<div class="page-header" style="background: url(assets/img/banner1.jpg)">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="breadcrumb-wrapper">
-          <h2 class="product-title">Login</h2>
-          <ol class="breadcrumb">
-            <li><a href="index-2.html">Home /</a></li>
-            <li class="current">Login</li>
-          </ol>
+  <div class="page-header" style="background: url(assets/img/banner1.jpg)">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="breadcrumb-wrapper">
+            <h2 class="product-title">Login</h2>
+            <ol class="breadcrumb">
+              <li>
+                <a href="index-2.html">Home /</a>
+              </li>
+              <li class="current">Login</li>
+            </ol>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- Write your Code from here -->
+  <!-- Write your Code from here -->
 
-<section class="login section-padding">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-5 col-md-12 col-xs-12">
-        <div class="login-form login-area">
-          <h3>Login Now</h3>
-          <form role="form" method="POST" class="login-form">
-            {% csrf_token %} {% if request.user.is_authenticated %}
-            <div class="text-center">
-              <button name="logout" class="btn btn-common log-btn">
-                Logout
-              </button>
-            </div>
-            {% else %}
-            <div class="form-group">
-              <div class="input-icon">
-                <i class="lni-user"></i>
-                <input
-                  type="text"
-                  id="sender-email"
-                  class="form-control"
-                  name="username"
-                  placeholder="Username"
-                />
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-icon">
-                <i class="lni-lock"></i>
-                <input
-                  type="password"
-                  class="form-control"
-                  name="password"
-                  placeholder="Password"
-                />
-              </div>
-            </div>
-            <div class="form-group mb-3">
-              <div class="custom-control custom-checkbox">
-                <input
-                  type="checkbox"
-                  class="custom-control-input"
-                  id="checkedall"
-                />
-                <label class="custom-control-label" for="checkedall"
-                  >Keep me logged in</label
-                >
-              </div>
-              <a class="forgetpassword" href="forgot-password.html"
-                >Forgot Password?</a
-              >
-            </div>
-            <div class="text-center">
-              <button name="login" class="btn btn-common log-btn">
-                Submit
-              </button>
-            </div>
-            {% endif %}
-          </form>
+  <section class="login section-padding">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-md-12 col-xs-12">
+          <div class="login-form login-area">
+            <h3>Login Now</h3>
+            <form role="form" method="POST" class="login-form">
+              {% csrf_token %} {% if request.user.is_authenticated %}
+                <div class="text-center">
+                  <button name="logout" class="btn btn-common log-btn">Logout</button>
+                </div>
+              {% else %}
+                <div class="form-group">
+                  <div class="input-icon">
+                    <i class="lni-user"></i>
+                    <input type="text" id="sender-email" class="form-control" name="username" placeholder="Username" />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="input-icon">
+                    <i class="lni-lock"></i>
+                    <input type="password" class="form-control" name="password" placeholder="Password" />
+                  </div>
+                </div>
+                <div class="form-group mb-3">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="checkedall" />
+                    <label class="custom-control-label" for="checkedall">Keep me logged in</label>
+                  </div>
+                  <a class="forgetpassword" href="forgot-password.html">Forgot Password?</a>
+                </div>
+                <div class="text-center">
+                  <button name="login" class="btn btn-common log-btn">Submit</button>
+                </div>
+              {% endif %}
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-{% endblock content %}
+  </section>
+{% endblock %}
