Added Edit and View Property Features

--- a/templates/edit_property.html
+++ b/templates/edit_property.html
@@ -108,35 +108,35 @@
                   <div class="dashboard-wrapper">
                     <div class="form-group mb-3">
                       <label class="control-label">Property Title</label>
-                      <input class="form-control input-md" required name="title" placeholder="Title" type="text" />
+                      <input class="form-control input-md" name="title" placeholder="Title" type="text" />
                     </div>
                     <div class="form-group mb-3">
                       <label class="control-label">Address</label>
-                      <input class="form-control input-md" required name="address" placeholder="Address" type="text" />
+                      <input class="form-control input-md" name="address" placeholder="Address" type="text" />
                     </div>
                     <div class="form-group mb-3">
                       <label class="control-label">Description</label>
-                      <textarea class="form-control" required name="description" id="description" placeholder="Description" rows="4"></textarea>
+                      <textarea class="form-control" name="description" id="description" placeholder="Description" rows="4"></textarea>
                     </div>
                     <div class="form-group mb-3">
                       <label class="control-label">Specification</label>
-                      <input id="input" type="text" required name="specification" value="" data-role="tagsinput" class="form-control" />
+                      <input id="input" type="text" name="specification" value="" data-role="tagsinput" class="form-control" />
                     </div>
                     <div class="form-group mb-3">
                       <label class="control-label">Postcode</label>
-                      <input class="form-control input-md" required name="postcode" placeholder="Postcode" type="text" />
+                      <input class="form-control input-md" name="postcode" placeholder="Postcode" type="text" />
                     </div>
                     <div class="form-group mb-3 tg-inputwithicon">
                       <label class="control-label">City</label>
                       <div class="tg-select form-control">
-                        <select required >
+                        <select>
                           <option value="none">Glasgow</option>
                         </select>
                       </div>
                     </div>
                     <div class="form-group mb-3">
                       <label class="control-label">Price Title</label>
-                      <input class="form-control input-md" required name="price" placeholder="Ad your Price" type="text" />
+                      <input class="form-control input-md" name="price" placeholder="Ad your Price" type="text" />
                       <div class="tg-checkbox mt-3">
                         <div class="custom-control custom-checkbox">
                           <input type="checkbox" class="custom-control-input" id="tg-priceoncall" />
