--- a/templates/heading.html
+++ b/templates/heading.html
@@ -85,7 +85,7 @@
           </li>
         </ul>
         <div class="post-btn">
-          <a class="btn btn-common" href="post-ads.html"><i class="lni-pencil-alt"></i> Post an Ad</a>
+          <a class="btn btn-common" href="{% url "add_property" %}"><i class="lni-pencil-alt"></i> Post an Ad</a>
         </div>
       </div>
     </div>
