--- a/templates/submitotp.html
+++ b/templates/submitotp.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="input-icon">
                   <i class="lni-lock"></i>
-                  <input type="password" class="form-control" name="otp" placeholder="Enter OTP" />
+                  <input type="password" class="form-control" name="otp" placeholder="Enter OTP that is sent of your mail" />
                 </div>
               </div>
               <div class="text-center">
