--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,35 +28,47 @@
               <div class="form-group">
                 <div class="input-icon">
                   <i class="lni-user"></i>
-                  <input type="text" id="Name" class="form-control" name="username" placeholder="Username" />
+                  <input type="text" id="Name" required class="form-control" name="username" placeholder="Username" />
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-icon">
+                  <i class="lni-user"></i>
+                  <input type="text" id="first_name" required class="form-control" name="first_name" placeholder="First Name" />
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-icon">
+                  <i class="lni-user"></i>
+                  <input type="text" id="last_name" required class="form-control" name="last_name" placeholder="Last Name" />
                 </div>
               </div>
               <div class="form-group">
                 <div class="input-icon">
                   <i class="lni-envelope"></i>
-                  <input type="text" id="sender-email" class="form-control" name="email" placeholder="Email Address" />
+                  <input type="text" id="sender-email" required class="form-control" name="email" placeholder="Email Address" />
                 </div>
               </div>
               <div class="form-group">
                 <div class="input-icon">
                   <i class="lni-lock"></i>
-                  <input type="password" id="password" class="form-control" name="password" placeholder="Password" />
+                  <input type="password" id="password" required class="form-control" name="password" placeholder="Password" />
                 </div>
               </div>
               <div class="form-group">
                 <div class="input-icon">
                   <i class="lni-lock"></i>
-                  <input type="password" id="password2" class="form-control" name="password2" placeholder="Retype Password" />
+                  <input type="password" id="password2" required class="form-control" name="password2" placeholder="Retype Password" />
                 </div>
               </div>
               <div class="form-group mb-3">
                 <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="checkedall" />
+                  <input type="checkbox" required class="custom-control-input" id="checkedall" />
                   <label class="custom-control-label" for="checkedall">By registering, you accept our Terms & Conditions</label>
                 </div>
               </div>
               <div class="text-center">
-                <button class="btn btn-common save-button log-btn" name="register" id="register" disabled>Register</button>
+                <button class="btn btn-common save-button log-btn" name="register" id="register">Register</button>
               </div>
             </form>
           </div>
@@ -72,51 +84,16 @@
     const password = document.getElementById('password')
     const password2 = document.getElementById('password2')
     const checkbox = document.getElementById('checkedall')
+    const first_name = document.getElementById('first_name')
+    const last_name = document.getElementById('last_name')
     
-    const checkFields = () => {
-      if (name.value && email.value && password.value && password2.value && checkbox.checked) {
+    {% comment %} const checkFields = () => {
+      if (name.value && email.value && password.value && first_name.value && last_name.value && password2.value && checkbox.checked) {
         registerButton.disabled = false
       } else {
         registerButton.disabled = true
       }
-    }
+    } {% endcomment %}
     
-    name.addEventListener('input', checkFields)
-    email.addEventListener('input', checkFields)
-    password.addEventListener('input', checkFields)
-    password2.addEventListener('input', checkFields)
-    checkbox.addEventListener('input', checkFields)
-    
-    const checkPasswords = () => {
-      if (password.value !== password2.value) {
-        password2.setCustomValidity('Passwords do not match')
-      } else {
-        password2.setCustomValidity('')
-      }
-    }
-    
-    password2.addEventListener('input', checkPasswords)
-    
-    const checkEmail = () => {
-      if (email.validity.typeMismatch) {
-        email.setCustomValidity('Please enter a valid email address')
-      } else {
-        email.setCustomValidity('')
-      }
-    }
-    
-    email.addEventListener('input', checkEmail)
-    
-    const checkAll = () => {
-      checkFields()
-      checkPasswords()
-      checkEmail()
-    }
-    
-    name.addEventListener('input', checkAll)
-    email.addEventListener('input', checkAll)
-    password.addEventListener('input', checkAll)
-    password2.addEventListener('input', checkAll)
-    checkbox.addEventListener('input', checkAll)
   </script>
 {% endblock %}
